kubernetes/overlays/test/dev-env.exemple.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minecharts-api
spec:
  template:
    spec:
      containers:
        - name: minecharts-api
