kubernetes/overlays/test/dev-env.example.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minecharts
spec:
  rules:
    - host: minecharts.example.com # replace with your ingress host
  tls:
    - hosts:
        - minecharts.example.com
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minecharts-api
  namespace: minecharts
spec:
  template:
    spec:
      containers:
        - name: minecharts-api
